[package]
name = "schedule-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
async-trait = { version = "0.1.73" }
async-raft = { version = "0.6", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
sled = { version = "0.34" }
tokio = { version = "1.12", features = ["full"] }
thiserror = "1.0.44"
tracing = "0.1"
tracing-futures = "0.2.5"


[dev-dependencies]
tracing-subscriber = "0.2.10"