[package]
name = "schedule-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0" }
async-trait = { version = "0.1" }
async-raft = { version = "0.6" }
actix = { version = "0.13" }
actix-web = { version = "4.3" }
actix-service = "2"
actix-http = "3.3"
chrono = { version = "0.4", features = ["serde"] }
cron = { version = "0.12" }
env_logger = { version = "0.10" }
log = "0.4"
opentelemetry = { version = "0.20", features = ["rt-tokio-current-thread"] }
opentelemetry-jaeger = { version = "0.19", features = ["rt-tokio-current-thread"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
sled = { version = "0.34" }
tokio = { version = "1.12", features = ["full"] }
thiserror = { version = "1.0" }
tracing = { version = "0.1" }
tracing-actix-web = { version = "0.7", features = ["opentelemetry_0_20"] }
tracing-bunyan-formatter = { version = "0.3" }
tracing-futures = { version = "0.2" }
tracing-opentelemetry = { version = "0.20" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }